--- a/slides/genomics-2019/session-5/index.html
+++ b/slides/genomics-2019/session-5/index.html
@@ -33,7 +33,7 @@
     <div style="margin-left: auto; margin-top: 20%">
     <h2 class="title">Principles and Applications of Modern DNA Sequencing</h2>
     <p style="color: lightgrey"> EEEB GU4055</p>
-    <h5 style="color: white">Session 5: Phylogenetics I</h5>
+    <h5 style="color: white">Session 5: Homology and BLAST</h5>
     <br>
     </div>
 </section>
@@ -51,11 +51,9 @@
     <p style='font-size:0.9em; 
     text-align: left; margin-left: 100px; margin-right: 100px'>
         <br>
-        1. Review notebook assignments: BLAST and Homology.
+        1. Review notebook assignments: Numpy, Pandas, BLAST and Homology.
         <br><br>
-        2. Discuss the assigned reading: OrthoDB.
-        <br><br>
-        3. Introduce new topic: Phylogenetics.
+        2. Discuss the assigned reading: OrthoDB and databases.
         <br><br>
     </p>
 </section>
@@ -124,8 +122,7 @@
 
 <section 
     data-transition="none"
-    data-background-iframe="https://blast.ncbi.nlm.nih.gov/Blast.cgi?CMD=Get&RID=5P0R1P6E016"
-    style="top:-960px; display: block;" 
+    data-background-iframe="https://blast.ncbi.nlm.nih.gov/Blast.cgi?CMD=Get&RID=3NW9CVDJ014"
     class="future" 
     hidden="">       
 </section>    
