--- a/slides/genomics/index.html
+++ b/slides/genomics/index.html
@@ -166,9 +166,9 @@
         3/10/2020: Phylogenomics<br> 
         Lecture: <a href="session-14/index.html">(HTML) </a> <a href="session-14/Genomics-14.pdf">(PDF)</a>
         <br>
-        In Class Exercise Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenomics/master> Link to assignment </a>
+        In Class Exercise Notebooks: <a href=https://mybinder.org/v2/gh/genomics-course/2020-phylogenomics/master> Link </a>
         <br>
-        Reading (No Reading -- review for midterm): <br>
+        Reading (No Reading -- review for midterm) <br>
 
     </p>
     </div>
